themes/myanimelist.net/myanimelist.css
/* ... */
.page-common #menu_left {
	background-color: var(--theme-background-color);
}
.page-common #nav li a {
	background-color: var(--theme-background-color) !important;
	color: var(--theme-text-color) !important;
}
.page-common #nav li.hover a,
.page-common #nav li a:hover {
	background-color: var(--theme-foreground-color) !important;
	color: var(--theme-text-color) !important;
}
.page-common #nav ul a:hover {
	background-color: var(--theme-background-color) !important;
	color: var(--theme-main-color) !important;
}

/* Right-side of Header Menu's */
.page-common #menu_right {
	background-color: var(--theme-background-color);
}

/* Search bar Filter Dropdown */
.page-common #searchBar.searchBar .form-select-outer {
	border-radius: unset;
}

/* Fixes border disappearing from Search Bar Filter Dropdown */
select#topSearchValue:focus-visible {
	outline: unset;
}
.page-common #menu {
	background-color: var(--theme-background-color) !important;
}
.page-common #header-menu .header-menu-login .btn-mal-service {
	color: var(--theme-text-color) !important;
}
.page-common #header-menu .header-menu-login .btn-signup {
	background-color: var(--theme-background-color);
	border-color: var(--theme-foreground-color);
	color: var(--theme-main-color) !important;
}
.page-common #header-menu .header-menu-login .btn-signup:hover {
	background-color: var(--theme-foreground-color);
	border-color: var(--theme-background-color);
}
.page-common #header-menu .header-menu-login .btn-login {
	border-color: var(--theme-foreground-color);
}
.page-common #header-menu .header-menu-login .btn-login:hover {
	background-color: #2e2e2e;
}
.page-common a,
.page-common a:visited,
.page-common a:hover,
.page-common .goodresult a:link,
.page-common .goodresult a:active,
.page-common .goodresult a:visited {
	color: var(--theme-main-color) !important;
}
.page-common .inputtext {
	background-color: var(--theme-foreground-color);
	border-color: var(--theme-main-color);
	color: var(--theme-text-color) !important;
}
.page-common .login-inputtext.error {
	background-color: #500e0e;
}
#contentWrapper {
	background-color: var(--theme-background-color) !important;
}
.page-common .button_edit {
	background-color: #2e2e2e !important;
	border-color: #4e4e4e !important;
	color: #888 !important;
}
.page-common .button_edit:hover {
	background-color: #3e3e3e !important;
}
.page-common a.button_add.button_add,
.page-common a.button_add.button_edit,
.page-common a.button_edit.button_add,
.page-common a.button_edit.button_edit {
	background-color: #2e2e2e !important;
	border-color: #4e4e4e !important;
}
.page-common a.button_edit.button_edit.reading,
.page-common a.button_edit.button_edit.watching {
	background-color: var(--theme-green-color) !important;
	border-color: var(--theme-green-color) !important;
	color: var(--theme-main-color) !important;
}
.page-common a.button_edit.button_edit.plantoread,
.page-common a.button_edit.button_edit.plantowatch {
	background-color: #bcbcbc !important;
	border-color: #bcbcbc !important;
	color: var(--theme-text-color) !important;
}
.page-common a.button_add.button_add.completed,
.page-common a.button_add.button_edit.completed,
.page-common a.button_edit.button_add.completed,
.page-common a.button_edit.button_edit.completed {
	background-color: var(--theme-foreground-color) !important;
	border-color: var(--theme-foreground-color) !important;
	color: var(--theme-text-color) !important;
}
.page-common a.button_add.button_add.dropped,
.page-common a.button_add.button_edit.dropped,
.page-common a.button_edit.button_add.dropped,
.page-common a.button_edit.button_edit.dropped {
	background-color: #ba4b4d !important;
	border-color: #ba4b4d !important;
	color: var(--theme-text-color) !important;
}
.page-common a.button_add.button_add.on-hold,
.page-common a.button_add.button_edit.on-hold,
.page-common a.button_edit.button_add.on-hold,
.page-common a.button_edit.button_edit.on-hold {
	background-color: #f1c83e !important;
	border-color: #f1c83e !important;
	color: var(--theme-text-color) !important;
}
.page-common .normal_header {
	border-color: var(--theme-main-color);
}
.page-common .borderClass {
	border-color: var(--theme-main-color);
}
.page-common .bgColor1 {
	background-color: var(--theme-foreground-color) !important;
}
.page-common .lightLink {
	color: #8e8e8e;
}
.page-common div.picSurround img {
	background-color: var(--theme-background-color) !important;
	border-color: var(--theme-main-color);
}
.detail-page-featured-article .news-list .news-unit .news-unit-right .text {
	color: var(--theme-text-color) !important;
}
body.index .widget.reviews .item {
	border-color: var(--theme-main-color);
}
body.index .widget .widget-header {
	color: var(--theme-text-color);
	border-color: var(--theme-main-color);
}
body.index .left-column {
	border-color: var(--theme-main-color);
}
body.index .widget.my_list_updates .item {
	border-color: var(--theme-main-color);
}
body.index .widget.friend_list_updates .item {
	border-color: var(--theme-main-color);
}
body.index .widget.clubs .item {
	border-color: var(--theme-main-color);
}
.ranking-digest {
	background-color: var(--theme-background-color);
}
.ranking-digest .ranking-header {
	background-color: var(--theme-background-color);
	border-bottom-color: var(--theme-main-color);
}
.ranking-digest.left {
	background-color: var(--theme-background-color);
}
.ranking-digest.left li.ranking-unit {
	border-color: var(--theme-main-color);
}
.ranking-digest .ranking-unit .image {
	-moz-box-shadow: 0 0 0 1px var(--theme-background-color), 0 0 0 2px #5e5e5e;
	-webkit-box-shadow: 0 0 0 1px var(--theme-background-color), 0 0 0 2px #5e5e5e;
	box-shadow: 0 0 0 1px var(--theme-background-color), 0 0 0 2px #5e5e5e;
}
/* ... */

